--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <script href= "js/jquery-1.12.0.min.js" type="text/javascript"></script>
     <script href= "js/scripts.js" type="text/javascript">
     </script>
