Add flashcard framework.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,99 @@
     <title>jQuery Flashcard Site</title>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+
+
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+
+
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+
+
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+
+
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+
+
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+
+
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+
+
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+
+
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+
+
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+
+      </div>
+
+
+    </div>
 
   </body>
 </html>
