Add flashcard framework.

--- a/index.html
+++ b/index.html
@@ -13,90 +13,179 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
+          <div class="flashcard word">
 
+          </div>
+          <div class="flashcard definition">
 
+          </div>
         </div>
         <div class="col-sm-6">
+          <div class="flashcard word">
 
+          </div>
+          <div class="flashcard definition">
+
+          </div>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-6">
+          <div class="flashcard word">
 
+          </div>
+          <div class="flashcard definition">
 
-        </div>
-        <div class="col-sm-6">
-
-        </div>
-
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-
+          </div>
 
         </div>
         <div class="col-sm-6">
+          <div class="flashcard word">
 
-        </div>
+          </div>
+          <div class="flashcard definition">
 
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-
-
-        </div>
-        <div class="col-sm-6">
-
-        </div>
-
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-
-
-        </div>
-        <div class="col-sm-6">
-
+          </div>
         </div>
 
       </div>
       <div class="row">
         <div class="col-sm-6">
+          <div class="flashcard word">
 
+          </div>
+          <div class="flashcard definition">
 
-        </div>
-        <div class="col-sm-6">
-
-        </div>
-
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-
+          </div>
 
         </div>
         <div class="col-sm-6">
+          <div class="flashcard word">
 
-        </div>
+          </div>
+          <div class="flashcard definition">
 
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-
-
-        </div>
-        <div class="col-sm-6">
-
+          </div>
         </div>
 
       </div>
       <div class="row">
         <div class="col-sm-6">
+          <div class="flashcard word">
 
+          </div>
+          <div class="flashcard definition">
+
+          </div>
 
         </div>
         <div class="col-sm-6">
+          <div class="flashcard word">
 
+          </div>
+          <div class="flashcard definition">
+
+          </div>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="flashcard word">
+
+          </div>
+          <div class="flashcard definition">
+
+          </div>
+
+        </div>
+        <div class="col-sm-6">
+          <div class="flashcard word">
+
+          </div>
+          <div class="flashcard definition">
+
+          </div>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="flashcard word">
+
+          </div>
+          <div class="flashcard definition">
+
+          </div>
+
+        </div>
+        <div class="col-sm-6">
+          <div class="flashcard word">
+
+          </div>
+          <div class="flashcard definition">
+
+          </div>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="flashcard word">
+
+          </div>
+          <div class="flashcard definition">
+
+          </div>
+
+        </div>
+        <div class="col-sm-6">
+          <div class="flashcard word">
+
+          </div>
+          <div class="flashcard definition">
+
+          </div>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="flashcard word">
+
+          </div>
+          <div class="flashcard definition">
+
+          </div>
+
+        </div>
+        <div class="col-sm-6">
+          <div class="flashcard word">
+
+          </div>
+          <div class="flashcard definition">
+
+          </div>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="flashcard word">
+
+          </div>
+          <div class="flashcard definition">
+
+          </div>
+
+        </div>
+        <div class="col-sm-6">
+          <div class="flashcard word">
+
+          </div>
+          <div class="flashcard definition">
+
+          </div>
         </div>
 
       </div>
