Improve compatibility between js css and html.

--- a/index.html
+++ b/index.html
@@ -4,194 +4,213 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-    <script href= "js/jquery-1.12.0.min.js" type="text/javascript"></script>
-    <script href= "js/scripts.js" type="text/javascript">
-    </script>
     <title>jQuery Flashcard Site</title>
+    <script src="js/jquery-1.12.0.min.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="JavaScript" class="flashcard1">
+            <h1>JavaScript</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="JavaScriptDef" class="flashcard1">
+            <p>
+              a high-level, dynamic, untyped, and interpreted programming language
+            </p>
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="Modulo" class="flashcard2">
+            <h1>Modulo</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="ModuloDef"class="flashcard2">
+            <p>
+              an operation that finds the remainder after division of one number by another
+            </p>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="operators" class="flashcard3">
+            <h1>Operators</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="operatorsDef" class="flashcard3">
+            <p>
+              a symbol that is used to perform an operation
+            </p>
           </div>
-
         </div>
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="NaN"class="flashcard4">
+            <h1>NaN</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="NaNDef" class="flashcard4">
+            <p>
+              property indicates that a value is not a legal number
+            </p>
           </div>
         </div>
-
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="VariableNaming" class="flashcard5">
+            <h1>Variable naming Conventions</h1>
           </div>
-          <div class="flashcard definition">
-
-          </div>
-
-        </div>
-        <div class="col-sm-6">
-          <div class="flashcard word">
-
-          </div>
-          <div class="flashcard definition">
-
+          <div id="VariableNamingDef" class="flashcard5">
+            <p>
+              style guidelines for programming
+            </p>
           </div>
         </div>
-
-      </div>
-      <div class="row">
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="PlusEquals" class="flashcard6">
+            <h1>+=</h1>
           </div>
-          <div class="flashcard definition">
-
-          </div>
-
-        </div>
-        <div class="col-sm-6">
-          <div class="flashcard word">
-
-          </div>
-          <div class="flashcard definition">
-
+          <div id="PlusEqualsDef" class="flashcard6">
+            <p>
+              operator that adds to a variable's defined value
+            </p>
           </div>
         </div>
 
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="Function" class="flashcard7">
+            <h1>Function</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="FunctionDef" class="flashcard7">
+            <p>
+              a block of code designed to perform a particular task
+            </p>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div id="Method" class="flashcard8">
+            <h1>Method</h1>
+          </div>
+          <div id="MethodDef" class="flashcard8">
+            <p>
+               a message you send, and the result is the response
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div id="Argument" class="flashcard9">
+            <h1>Argument to a method</h1>
+          </div>
+          <div id="ArgumentDef" class="flashcard9">
+            <p>
+              is located within the parentheses of the method
+            </p>
           </div>
 
         </div>
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="String" class="flashcard10">
+            <h1>String</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="StringDef" class="flashcard10">
+            <p>
+              variable containing letters, numbers, and characters
+            </p>
           </div>
         </div>
 
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="Chaining" class="flashcard11">
+            <h1>Chaining methods</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="ChainingDef" class="flashcard11">
+            <p>
+              a technique that can be used to simplify code in scenarios that involve calling multiple functions on the same object consecutively
+            </p>
           </div>
-
         </div>
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="Escape" class="flashcard12">
+            <h1>Escape</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="EscapeDef" class="flashcard12">
+            <p>
+              function that computes a new string in which certain characters have been replaced by a hexadecimal escape sequence
+            </p>
           </div>
         </div>
-
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="Alert" class="flashcard13">
+            <h1>Alert</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="AlertDef" class="flashcard13">
+            <p>
+              function that creates dialouge box with entered string
+            </p>
           </div>
-
         </div>
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="Commenting" class="flashcard14">
+            <h1>Commenting Code</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="CommentingDef" class="flashcard14">
+            <p>
+              comments inserted into the source code without affecting the program
+            </p>
           </div>
         </div>
-
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="Booleans" class="flashcard15">
+            <h1>Booleans</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="BooleansDef" class="flashcard15">
+            <p>
+              a true or false value
+            </p>
           </div>
-
         </div>
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="Undefined" class="flashcard16">
+            <h1>Undefined</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="UndefinedDef" class="flashcard16">
+            <p>
+              the undefined property indicates that a variable has not been assigned a value
+            </p>
           </div>
         </div>
-
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="Parameter" class="flashcard17">
+            <h1>Parameter</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="ParameterDef" class="flashcard17">
+            <p>
+              variable inputs to a function
+            </p>
           </div>
-
         </div>
         <div class="col-sm-6">
-          <div class="flashcard word">
-
+          <div id="Return" class="flashcard18">
+            <h1>Return</h1>
           </div>
-          <div class="flashcard definition">
-
+          <div id="ReturnDef" class="flashcard18">
+            <p>
+              statement that ends function execution and specifies a value to be returned to the function caller
+            </p>
           </div>
         </div>
-
       </div>
-
-
     </div>
-
   </body>
 </html>
