--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container text-center">
       <div class="row">
         <div class="col-sm-6">
           <div id="JavaScript" class="flashcard1">
