--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
+
     <link rel="stylesheet" href="css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+      <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
     <title>jQuery Flashcard Site</title>
     <script src="js/jquery-1.12.0.min.js"></script>
     <script src="js/scripts.js"></script>
   </head>
   <body>
+<div class="container-fluid text-center">
+  <div class="jumbotron">
+      <h1>JavaScript Flashcards</h1>
+      <p>
+        A handy way to learn common JavaScript and jQuery definitions! Click on a card and see what happens!
+      </p>
+  </div>
+
+</div>
+
     <div class="container text-center">
       <div class="row">
         <div class="col-sm-6">
@@ -17,7 +28,7 @@
           </div>
           <div id="JavaScriptDef" class="flashcard1">
             <p>
-              a high-level, dynamic, untyped, and interpreted programming language
+              an object-oriented computer programming language commonly used to create interactive effects within web browsers
             </p>
           </div>
         </div>
