--- a/index.html
+++ b/index.html
@@ -222,6 +222,13 @@
           </div>
         </div>
       </div>
+      <div id="footer" class="row">
+        <div class="col-sm-12">
+            <footer>
+              <small>© Copyright 2016, Will Johnson &amp; Jordan Meier</small>
+            </footer>
+        </div>
+      </div>
     </div>
   </body>
 </html>
